--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Document</title>
 </head>
 <body>
+  <button id="reset-button">Reset Game</button>
   <div id="container"></div>
 </body>
 </html>
